--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,7 @@
 \usepackage[nottoc,numbib]{tocbibind} % Add references to table of contents
 \usepackage{parskip} % Adds white space between paragraphs
 \usepackage{pdflscape} % To create landscape pages that show as landscape in PDF viewer
+\usepackage{placeins} % to use \FloatBarrier where want a hard break between content (to force and order of text and figures
 \usepackage{ragged2e} % Better right ragged edges (allows hyphenation)
 \usepackage{subcaption} % Allows use of subfigures
 \usepackage[super]{natbib} % Citations using superscript
