--- a/sections/12_paper_2.tex
+++ b/sections/12_paper_2.tex
@@ -6,7 +6,7 @@ To understand between-hospital variation in thrombolysis use among emergency str
 
 \subsection{Methods overview}
 
-Machine learning (XGBoost\cite{chen_xgboost_2016}), to learn which patients would receive thrombolysis at each stroke team, was applied to 88,928 patients who arrived at 132 different stroke teams within 4 hours of stroke onset, from 2016 to 2018. Shapley (SHAP) values were calculated for each prediction, providing estimates of how patient features, and hospital identity, influence the odds of receiving thrombolysis \cite{lundberg_unified_2017}.
+Machine learning (XGBoost\cite{chen_xgboost_2016}) was used to learn which patients would receive thrombolysis at each stroke team, was applied to 88,928 patients who arrived at 132 different stroke teams within 4 hours of stroke onset, from 2016 to 2018. Shapley (SHAP) values were calculated for each prediction, providing estimates of how patient features, and hospital identity, influence the odds of receiving thrombolysis \cite{lundberg_unified_2017}.
 
 \subsection{Key results}
 
