Updates from Overleaf

--- a/sections/12_paper_2.tex
+++ b/sections/12_paper_2.tex
@@ -2,7 +2,7 @@
 
 \subsection{Objective}
 
-To understand between-hospital variation in thrombolysis use among emergency stroke admissions in England and Wales.
+To understand, using explainable machine learning, between-hospital variation in thrombolysis use among emergency stroke admissions in England and Wales.
 
 \subsection{Methods overview}
 
@@ -31,7 +31,7 @@ Correlations between the 10 features were measured using coefficients of determi
 
 \subsubsection{Model accuracy}
 
-Model accuracy was measured using stratified 5-fold cross validation. Overall accuracy was 85.0\% (83.9\% sensitivity and specificity could be achieved simultaneously). The model predicted hospital thrombolysis use at each hospital with very good accuracy (r-squared = 0.977, with a mean absolute error of 1.1 percentage points).
+Model accuracy was measured using stratified 5-fold cross validation. Overall accuracy was 85.0\% (83.9\% sensitivity and specificity could be achieved simultaneously). Receiver Operating Characteristic Area Under Curve (ROC-AUC) was 0.918. The model predicted hospital thrombolysis use at each hospital with very good accuracy (r-squared = 0.977, with a mean absolute error of 1.1 percentage points).
 
 \subsubsection{Individual patient prediction}
 
