--- a/sections/13_paper_3.tex
+++ b/sections/13_paper_3.tex
@@ -6,7 +6,9 @@ To investigate, using explainable machine learning, the benefit of thrombolysis,
 
 \subsection{Methods overview}
 
-A total of 168,347 ischaemic stroke patients who attended one of 118 emergency stroke hospitals in England and Wales from 2016 to 2021 were extracted from the Sentinel Stroke National Audit Programme (SSNAP). We used explainable machine learning (XGBoost\cite{chen_xgboost_2016} with SHAP\cite{lundberg_unified_2017}) to examine the effect of patient characteristics, hospital attended, and use/time of thrombolysis on the odds of achieving a good outcome (being at or below any given modified Rankin Scale threshold). A linear regression model was fitted to the estimated effect of onset-to-treatment time on thrombolysis to permit comparison with clinical trial meta-analyses.
+Data for a total of 168,347 ischaemic stroke patients who attended one of 118 emergency stroke hospitals in England and Wales from 2016 to 2021 were extracted from the Sentinel Stroke National Audit Programme (SSNAP). We used explainable machine learning (XGBoost\cite{chen_xgboost_2016} with SHAP\cite{lundberg_unified_2017}) to examine the effect of patient characteristics, hospital attended, and use/time of thrombolysis on the odds of achieving a good outcome (being at or below any given modified Rankin Scale threshold). A linear regression model was fitted to the estimated effect of onset-to-treatment time on thrombolysis to permit comparison with clinical trial meta-analyses.
+
+Code, and full results, for the machine learning work may be found at \url{https://github.com/samuel-book/thrombolysis_clinical_trials_ml_paper}
 
 \subsection{Key results}
 
@@ -24,10 +26,11 @@ Using the results from Pearn \textit{el at}. \cite{pearn_are_2024}, we selected 
     \item Precise onset known: Onset time recorded was recorded as being precise time (as opposed to a best estimate)
 \end{enumerate}
 
+Code and full results for feature selection may be found at \url{https://github.com/samuel-book/feature_selection_thrombolysis_outcome_ml_paper}
 
 \subsubsection{Model accuracy}
 
-With 7 input features, overall accuracy ranged from 77.6\% to 89.7\% across the six models (standard deviation across the 5 k-folds ranged from 0.001 to 0.002). This represented between 95-98\% of the accuracy that is obtained with all the features as inputs. ROC-AUC ranged from 0.852 to 0.893 (standard deviation across the 5 k-folds ranged from 0.001 to 0.002).
+With 7 input features, overall accuracy ranged from 77.6\% to 89.7\% across the six models (standard deviation across the 5 k-folds ranged from 0.001 to 0.002). This represented between 95-98\% of the accuracy that is obtained with all the features as inputs. Receiver Operating Characteristic Area Under Curve (ROC-AUC) ranged from 0.852 to 0.893 (standard deviation across the 5 k-folds ranged from 0.001 to 0.002).
 
 \subsubsection{Global SHAP patterns}
 
@@ -68,7 +71,7 @@ For each patient in the test set we extracted SHAP values for each feature with 
 
 \subsubsection{The direct contribution of thrombolysis use to the shift in probability of a good outcome}
 
-Foe each patient patients in the first k-fold test set that received thrombolysis (n = 41,382), we performed a counterfactual analysis, predicting outcome probabilities if the patient had not received thrombolysis. We calculated the effect of thrombolysis by taking the difference in SHAP Values, between treated and the predicted outcome if untreated, for the contribution of thrombolysis to achieving a good outcome.
+We used the first k-fold train/test set split (4:1 train:test data) to investigate likely outcome from thrombolysis. For each patient patients in the test set that received thrombolysis (n = 41,382), we performed a counterfactual analysis, predicting outcome probabilities if the patient had not received thrombolysis. We calculated the effect of thrombolysis by taking the difference in SHAP Values, between treated and the predicted outcome if untreated, for the contribution of thrombolysis to achieving a good outcome.
 
 We modelled the decay in effect of thrombolysis by fitting a linear regression model to the benefit of thrombolysis (log odds shift in attaining a good outcome) with time from onset to treatment (excluding patients treated after 300 minutes). The model used the definition of mRS 0-1 as a good outcome to match the definition used in the meta analysis of clinical trials \cite{emberson_effect_2014}. The analysis was applied to three patient cohorts: 1. all ischaemic strokes, 2. severe strokes (NIHSS 11+), and 3. mild-moderate strokes (NIHSS 0-10). 
 
@@ -100,14 +103,6 @@ Figure \ref{fig:linear_regression_plots} shows a linear regression fitted to the
         \end{tabular}
       \label{fig:stats_table_mrs1}
 \end{table}
-
-
-
-
-
-
-
-
 
 \subsection{Conclusions}
 
